@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2006-10-01 patrick  Removed the use of vpr::ReturnStatus in vpr::Signal.
+                    NEW VERSION: 1.1.34
 2006-10-01 patrick  Removed the use of vpr::ReturnStatus in vpr::RWMutex.
                     NEW VERSION: 1.1.33
 2006-10-01 patrick  Introduced vpr::DeadlockException and put it to use in
